Tec v1.0.31 Actualiza conteo de votos